# p2p-lan-share

./: .gitignore  CMakeLists.txt  PROJECT_PLAN_V2.md  README.md  interactive_project_plan_v2.html  project_plan.md
docs/: PROJECT_PLAN_V2.md  interactive_project_plan.html  project_plan.md
src/: main.cpp
